remove commented line now that it's in git.